--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,12 @@
         android:onClick="test1"
         android:text="Test 1"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="test2"
+        android:text="Test 2"
+        />
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
